# pyiEEGfeatures

./: .gitignore  README.md  check.py  paths.py  pyproject.toml
FILES/BP_EXTRACTED/909/: BPall_P909.mat
docs/: Makefile  index.html  make.bat
docs/source/: conf.py  index.md  index.rst
docs/source/api/: FilterEEG.md  NaNcontrol.md  artefactsMetrics.md  edfCollectionInfo.md  edfSegmentsiEEGSimple.md  eeg_plot.md  index.md
processing/: BandPower_perWindow_NaNs.py  BandPower_perWindow_NaNs_abnormalities.py  BandPower_perWindow_NaNs_normative.py  bandpowerUCLH_multi_finalRun_P1163_0.py  bandpowerUCLH_multi_finalRun_abnormalities_Rocket.py  bandpowerUCLH_multi_finalRun_normative_Rocket.py
src/pyiEEGfeatures/: FilterEEG.py  IIR_notch_filter.py  NaNControl.py  Pyweltch_method.py  Pyweltch_method_abnormalities.py  Pyweltch_method_normative.py  Welch_NaN_1way.py  Welch_NaN_customWelch.py  Welch_method.py  Welch_with_NaNs.py  Welch_with_NaNs_abnormalities.py  Welch_with_NaNs_normative.py  artefactsMetrics.py  eeg_plot.py  interplolate_outliers.py
