[tool.poetry]
name = "pyiEEGfeatures"
version = "0.0.1"
description = "Useful functions for extracting features from iEEG signals"
authors = ["mariella <mariella199098@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
