[tool.poetry]
name = "pyiEEGfeatures"
version = "0.0.1"
description = "Useful functions for extracting features from iEEG signals"
authors = ["mariella <mariella199098@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
scipy = "^1.8.1"
sklearn = "^0.0"
seaborn = "^0.11.2"
pip = "^22.1.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
myst-parser = "^0.18.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = "^1.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
